--- a/resources/style.css
+++ b/resources/style.css
@@ -1,7 +1,9 @@
-.logo, .content, .column, span, .image-content, .story, .news-bites{
-  border: 1px solid black;
-}
+
 /* top header */
+body{
+  margin: 0;
+}
+
 header{
   display: flex;
   align-items: center;
@@ -12,6 +14,9 @@ header{
   font-size: 14px;
   font-weight: bold;
   border-bottom: 1px solid black;
+  background-color: white;
+  z-index: 1;
+
 }
 
 .logo{
@@ -29,8 +34,6 @@ header{
 }
 
 header nav{
-  display: flex;
-  align-items: center;
   padding-right: 40px;
 }
 
@@ -50,17 +53,17 @@ a{
   width: 1232px;
   margin: 0 auto 78px auto;
   padding-top: 116px;
-  position: relative;
-  top: 80px;
   font-family: Georgia;
-  font-size: 17px;
+  font-size: 16px;
   color: black;
+  min-height: 1076px;
+
 }
 
 .column{
   display: flex;
   flex-direction: column;
-  margin-right: 30px;
+  margin-right: 32px;
 }
 
 .column.large{
@@ -78,13 +81,98 @@ a{
 /*content images*/
 
 .image-content{
-  display: flex;
+  height: 300px;
   font-weight: bold;
   font-size: 30px;
-  color: pink;
+  margin-top: 15px;
+  color: white;
+  text-align: center;
 }
 
 .lead-story .image-content{
   font-size: 40px;
-  background-image: url(My_Times/resources/images/img-story-main.png);
+  width: 630px;
+  margin-top: 0;
+  text-align: left;
+  background-image: url(./images/img-story-main.png)
+}
+
+.Earth{
+  background-image: url(./images/img-story-2.png);
+}
+
+.Camera{
+  background-image: url(./images/img-story-3.png);
+}
+
+.Cat{
+  background-image: url(./images/img-story-1.png);
+}
+
+.stories{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 17px;
+}
+
+.story{
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+
+.stories .text-content{
+  height: 250px;
+}
+
+.narrative{
+  margin-top: 16px;
+}
+
+#cookie{
+  height: 240px;
+}
+
+.bite{
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  background-color: WhiteSmoke;
+  font-family: Verdana;
+  font-size: 12px;
+  color: DimGray;
+}
+
+.news-bite h3{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.footer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: MediumAquamarine;
+  margin: auto;
+  font-family: Verdana;
+  font-size: 12px;
+  width: 100%
+  height: 325px;
+}
+
+.footer nav{
+  display: inline-block;
+  padding-left: 25px;
+}
+.footer .title{
+  font-family: Georgia;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  display: inline-block;
+  padding-right: 25px;
+  border-right: 2px solid white;
 }
